Fixed positioning of footer on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ body{
 }
 #container footer {
     bottom: 0px;
-    position: absolute;
+    position: static;
     text-align: center;
     width: 100%;
 }
